test_regress/t/t_covergroup_option_unsup.out
%Warning-COVERIGN: t/t_covergroup_option_unsup.v:14:30: Ignoring unsupported coverage option: 'detect_overlap'
   14 |     cp1: coverpoint cp_expr {option.detect_overlap = 1;}
      |                              ^~~~~~
                   ... For warning description see https://verilator.org/warn/COVERIGN?v=latest
                   ... Use "/* verilator lint_off COVERIGN */" and lint_on around source to disable this message.
%Error: Exiting due to
